--- a/index.html
+++ b/index.html
@@ -102,9 +102,7 @@ typing();
 const storyData={
 
 intro:{
-text:`Background Story (Subtle Death Hint)
-
-Willow Creek Trail is a quiet hiking path on the outskirts of town. Locals often walk it during the day, but at night strange things happen...
+text:`Willow Creek Trail is a quiet hiking path on the outskirts of town. Locals often walk it during the day, but at night strange things happen...
 
 A faint whisper drifts toward you from the trees, calling your name.`,
 startButton:true
@@ -240,6 +238,7 @@ showScene("intro");
 
 </body>
 </html>
+
 
 
 
