--- a/index.html
+++ b/index.html
@@ -169,9 +169,14 @@ choices:[
 },
 
 success:{
-text:`Lanterns form a circle of light.
+text:`The grove is lit by lanterns forming a perfect circle. The shadows cannot enter. You feel weightless, lighter than air, and see a faint path leading upward, bathed in soft golden light.
 
-You move on peacefully.
+All the whispers, lanterns, and clues suddenly make sense: they were guiding you here, guiding you forward.
+
+You step forward along the glowing path, and a warm, peaceful breeze surrounds you. The trail fades behind you.
+It all makes sense now — you had already walked Willow Creek Trail after life, and every choice was guiding you to this road…
+a path forward, silently promised by the light.
+
 
 The end.`
 },
@@ -238,6 +243,7 @@ showScene("intro");
 
 </body>
 </html>
+
 
 
 
