--- a/index.html
+++ b/index.html
@@ -80,9 +80,45 @@ to{opacity:1;}
 
 </div>
 
+<!-- 👻 AMBIENT AUDIO (ghost autoplay) -->
+<audio id="ambience" loop autoplay muted preload="auto">
+<source src="ambience.mp3" type="audio/mpeg">
+</audio>
+
 <script>
 
 let previousScene=null;
+
+/* 👻 GHOST AUTOPLAY AUDIO */
+
+const ambience=document.getElementById("ambience");
+
+ambience.volume=0;
+ambience.play().catch(()=>{});
+
+function fadeInAudio(){
+
+let vol=0;
+
+const fade=setInterval(()=>{
+
+if(vol<0.6){
+vol+=0.02;
+ambience.volume=vol;
+}else{
+clearInterval(fade);
+}
+
+},100);
+
+document.removeEventListener("click",fadeInAudio);
+document.removeEventListener("keydown",fadeInAudio);
+
+}
+
+document.addEventListener("click",fadeInAudio);
+document.addEventListener("keydown",fadeInAudio);
+
 
 /* TYPEWRITER EFFECT */
 
@@ -243,6 +279,7 @@ showScene("intro");
 
 </body>
 </html>
+
 
 
 
