--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ to{opacity:1;}
 </div>
 
 <!-- 👻 AMBIENT AUDIO (ghost autoplay) -->
-<audio id="ambience" loop autoplay muted preload="auto">
+<audio id="ambience.mp3" loop autoplay muted preload="auto">
 <source src="ambience.mp3" type="audio/mpeg">
 </audio>
 
@@ -279,6 +279,7 @@ showScene("intro");
 
 </body>
 </html>
+
 
 
 
