--- a/index.html
+++ b/index.html
@@ -81,20 +81,24 @@ to{opacity:1;}
 </div>
 
 <!-- 👻 AMBIENT AUDIO (ghost autoplay) -->
-<audio id="ambience.mp3" loop autoplay muted preload="auto">
+<audio id="ambience" loop autoplay muted preload="auto">
 <source src="ambience.mp3" type="audio/mpeg">
 </audio>
 
 <script>
 
-let previousScene=null;
+let ambience;
 
-/* 👻 GHOST AUTOPLAY AUDIO */
+window.onload = function(){
 
-const ambience=document.getElementById("ambience");
+ambience = document.getElementById("ambience");
 
-ambience.volume=0;
+if(ambience){
+ambience.volume = 0;
 ambience.play().catch(()=>{});
+}
+
+};
 
 function fadeInAudio(){
 
@@ -102,9 +106,9 @@ let vol=0;
 
 const fade=setInterval(()=>{
 
-if(vol<0.6){
-vol+=0.02;
-ambience.volume=vol;
+if(vol < 0.6){
+vol += 0.02;
+ambience.volume = vol;
 }else{
 clearInterval(fade);
 }
@@ -279,6 +283,7 @@ showScene("intro");
 
 </body>
 </html>
+
 
 
 
