--- a/index.html
+++ b/index.html
@@ -81,7 +81,8 @@ to{opacity:1;}
 </div>
 
 <!-- 👻 AMBIENT AUDIO (ghost autoplay) -->
-<audio id="ambience" loop autoplay muted preload="auto">
+<audio id="ambience" loop autoplay muted playsinline
+preload="auto">
 <source src="ambience.mp3" type="audio/mpeg">
 </audio>
 
@@ -102,8 +103,6 @@ ambience.volume = 0;
 function fadeInAudio(){
 
 if(!ambience) return;
-
-// FORCE PLAY on interaction (this is the missing piece)
 ambience.play().catch(()=>{});
 
 let vol=0;
@@ -285,6 +284,7 @@ showScene("intro");
 
 </body>
 </html>
+
 
 
 
