--- a/index.html
+++ b/index.html
@@ -103,11 +103,14 @@ ambience.volume = 0;
 function fadeInAudio(){
 
 if(!ambience) return;
+
+// unmute + force play
+ambience.muted = false;
 ambience.play().catch(()=>{});
 
-let vol=0;
+let vol = 0;
 
-const fade=setInterval(()=>{
+const fade = setInterval(()=>{
 
 if(vol < 0.6){
 vol += 0.02;
@@ -118,14 +121,13 @@ clearInterval(fade);
 
 },100);
 
-document.removeEventListener("click",fadeInAudio);
-document.removeEventListener("keydown",fadeInAudio);
+document.removeEventListener("click", fadeInAudio);
+document.removeEventListener("keydown", fadeInAudio);
 
 }
 
-document.addEventListener("click",fadeInAudio);
-document.addEventListener("keydown",fadeInAudio);
-
+document.addEventListener("click", fadeInAudio);
+document.addEventListener("keydown", fadeInAudio);
 
 function typeWriter(text, element, speed=18){
 element.innerHTML="";
@@ -284,6 +286,7 @@ showScene("intro");
 
 </body>
 </html>
+
 
 
 
